create pg table sample
