# api/swagger/swagger.yaml
@@ -42,6 +42,30 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /create_table:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: pg_operations
+    get:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: createTable
+      parameters:
+        - name: name
+          in: query
+          description: The name of the person to whom to say hello
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
